[project]
name = "leetcode"
version = "0.1"
dependencies = ["typing_extensions"]

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark", "hypothesis"]
dev = ["pre-commit", "pip-tools", "ruff"]

[tool.pytest.ini_options]
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
line_length = 120
case_sensitive = false
order_by_type = false

[tool.ruff]
select = ["A", "B", "C4", "D", "E", "F", "N", "I", "Q", "UP", "ANN", "S", "BLE", "COM", "DTZ", "PIE", "PT", "RSE", "SIM", "ARG", "PTH", "PL", "TRY", "NPY", "RUF"]
ignore = ["D1", "D401", "D204", "D203", "D213", "S101", "PLR2004"]
line-length = 120

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pylint]
max-args = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
